@@ -1,3 +1,6 @@
+2003-09-11	blytkerchan
+	* empty.html: make it more evident where to put text
+
 2003-09-10	blytkerchan
 	* tech_arch.html: add link to list (and words to accompany it)
 
